networking/ingress/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: blue
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "ckad.clarusway.us"
      http:
        paths:
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache-svc
                port:
                  number: 80
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port: 
                  number: 80
